--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Brian Kintz</title>
 
-    <link href='https://fonts.googleapis.com/css?family=PT+Mono|Rock+Salt' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Mono|PT+Sans|Rock+Salt' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="res/css/styles.css">
     <link rel="stylesheet" href="res/css/animate.min.css">
   </head>
@@ -17,7 +17,7 @@
         <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-0 col-lg-7 cover-image"></div>
 
         <div class="col-xs-12 col-md-6 col-lg-5 cover-text">
-          <span class="cover-title">Brian Kintz</span>
+          <h1 class="logo">Brian Kintz</h1>
           <hr class="animated fadeIn animation-delay-1s">
           <ul class="list-inline">
             <li class="animated fadeInRight animation-delay-2s">Programmer.</li>
@@ -39,7 +39,7 @@
 
       <div class="row row-offcanvas row-offcanvas-left">
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-          <h2 class="logo-text">Brian Kintz</h2>
+          <h2 class="logo">Brian Kintz</h2>
 
           <ul class="nav nav-pills nav-stacked">
             <li class="active"><a href="#">Link</a></li>
