--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
 
 
     <div class="container">
-
-      <div class="row row-offcanvas row-offcanvas-left">
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+      <div class="row">
+        <div class="hidden-sm col-md-3">
           <h2 class="logo">Brian Kintz</h2>
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="hidden-sm col-md-3">
           <ul class="nav nav-pills nav-stacked">
             <li class="active"><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
@@ -56,10 +59,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-9">
-          <p class="pull-left visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-          </p>
-
+          <p>blah.</p>
         </div>
       </div>
     </div>
