--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="row row-header hidden-xs hidden-sm">
         <div id="affix-target-header">
-          <div class="col-md-3">
+          <div class="col-xs-12">
             <h2 class="logo">Brian Kintz</h2>
           </div>
 
