--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Brian Kintz</title>
 
     <link href='https://fonts.googleapis.com/css?family=PT+Sans|Rock+Salt' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="res/css/styles.css">
     <link rel="stylesheet" href="res/css/animate.min.css">
   </head>
@@ -41,8 +42,16 @@
     <div class="container">
       <div class="row row-header hidden-xs hidden-sm">
         <div id="affix-target-header">
-          <div class="col-xs-12">
+          <div class="col-xs-6">
             <h2 class="logo">Brian Kintz</h2>
+          </div>
+
+          <div class="col-xs-6 text-right social">
+            <a href="https://stackoverflow.com/users/362922/brian-kintz"><span class="fa fa-stack-overflow"></span></a>
+            <a href="https://github.com/elmugrat"><span class="fa fa-github"></span></a>
+            <a href="https://www.linkedin.com/in/bkintz"><span class="fa fa-linkedin"></span></a>
+            <a href="https://www.facebook.com/bkintz"><span class="fa fa-facebook"></span></a>
+            <a href="mailto:btkintz@gmail.com"><span class="fa fa-envelope-o"></span></a>
           </div>
 
           <hr>
