--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
           <div id="contact">
             <h3>Contact</h3>
-            <p>Coming soon...</p>
+            <p>Coming soon...maybe</p>
           </div>
         </div>
       </div>
