--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
           </div>
         </div>
       </div>
+
+      <div class="row row-footer">
+        <div class="col-xs-12 text-center">
+          <hr>
+          <p>Handmade with lots of <span class="fa fa-heart"></span> by Brian Kintz - Copyright 2016</p>
+        </div>
+      </div>
     </div>
 
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
