Completely switch to FontAwesome

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <li class="animated fadeInRight animation-delay-7s">Geek.</li>
           </ul>
 
-          <p class="cover-scrolldown animated fadeIn animation-delay-10s">
-            <span class="glyphicon glyphicon-menu-down"></span>
+          <p class="cover-scrolldown animated fadeIn animation-delay-9s">
+            <span class="fa fa-angle-down fa-2x animated pulse infinite"></span>
           </p>
         </div>
       </div>
