--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <li>Served as an EMS Lieutenant and shift supervisor at <a href="http://web.uri.edu/ems/">University of Rhode Island Emergency Medical Services</a>. Here I was responsible for supervising all EMS operations on the Kingston Campus including concerts and sporting events, training new members and interfacing with local police, EMS and fire agencies.</li>
             </ul>
           </p>
-          <p><strong>In the future,</strong> I would like to expand my expertise in modern web technologies, build on my knowledge of embedded software development and shed light on the shadowy areas of scalability, big data and parallel processing.</p>
+          <p><strong>In the future,</strong> I would like to expand my expertise in modern web technologies, build on my knowledge of embedded software development and keep writing code that makes life easier.</p>
           <hr>
           <h4>Skills</h4>
           <p><strong class="strong-title">High Level:</strong>C#, C/C++, Java, Perl, PHP, HTML, CSS/Sass, JavaScript, SQL</p>
@@ -102,7 +102,7 @@
         <div class="col-xs-12 col-md-7 col-md-offset-5">
           <h3>Love what you do.</h3>
           <p>When I'm not working, I keep myself busy with small tech/programming projects. I like to tinker with stuff I've never used before and see what it's capable of and how I can make use of it.</p>
-          <p>Some of the more interesting projects include a <a href="https://github.com/elmugrat/smart_mirror">Smart Mirror</a> and an <a href="https://github.com/elmugrat/led_cube">LED Cube</a>.</p>
+          <p>Some of my more interesting projects include a <a href="https://github.com/elmugrat/smart_mirror">Smart Mirror</a> and an <a href="https://github.com/elmugrat/led_cube">LED Cube</a>.</p>
           <p>My life isn't all about code and computers though. I also love to get outside and work out the desk-job stiffness by trail running, rock climbing, swimming, sailing, biking, and skiing. I've raced sailboats, I swam competitively, worked/volunteered for years as an EMT, I'm a ski instructor, and I've mastered a foreign language.</p>
         </div>
       </div>
