--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=PT+Sans|Rock+Salt' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="res/css/styles.css">
-    <link rel="stylesheet" href="res/css/animate.min.css">
+    <link rel="stylesheet" href="res/css/styles.min.css">
   </head>
   <body>
     <div class="container-fluid container-cover">
@@ -116,7 +115,6 @@
     </div>
 
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="res/js/bootstrap.min.js"></script>
-    <script src="res/js/main.js"></script>
+    <script src="res/js/main.min.js"></script>
   </body>
 </html>
