--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Brian Kintz</title>
 
     <link href='https://fonts.googleapis.com/css?family=PT+Sans|Rock+Salt' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="res/css/styles.min.css">
   </head>
   <body>
